# page-loader

./: .gitignore  Makefile  README.md  config.coveragerc  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test-check.yml
page_loader/: __init__.py  download.py  images.py  locals.py  logging_settings.py  naming.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_errors.py  test_main.py
tests/fixtures/: result_page.html
