[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a page loader - a program that downloads a page from the network and puts it in the specified existing directory."
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.9.3"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
