[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a page loader - a program that downloads a page from the network and puts it in the specified existing directory."
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"
colorama = "^0.4.4"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.9.3"
wemake-python-styleguide = "^0.15.3"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
